--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "test:coverage": "c8 --reporter=text --reporter=html --exclude='out/test/**' --exclude='**/*.test.js' npm test"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -86,6 +87,7 @@
     "@types/vscode": "^1.107.0",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
+    "c8": "^10.1.3",
     "eslint": "^9.39.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1"
